RESOLVED FIXED294395
Fix build with ENABLE_MALLOC_HEAP_BREAKDOWN enabled by ensuring LoaderMalloc is visible
https://bugs.webkit.org/show_bug.cgi?id=294395
Summary Fix build with ENABLE_MALLOC_HEAP_BREAKDOWN enabled by ensuring LoaderMalloc ...
Yijia Huang
Reported 2025-06-12 09:13:51 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-12 09:16:04 PDT
Yijia Huang
Comment 2 2025-06-12 09:18:46 PDT
EWS
Comment 3 2025-06-12 10:16:35 PDT
Committed 296154@main (3248c16422b3): <https://commits.webkit.org/296154@main> Reviewed commits have been landed. Closing PR #46664 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.