Fix build with ENABLE_MALLOC_HEAP_BREAKDOWN enabled by ensuring LoaderMalloc is visible https://bugs.webkit.org/show_bug.cgi?id=294395 rdar://153204638

Reviewed by Yusuke Suzuki and Ryan Reno.

When ENABLE_MALLOC_HEAP_BREAKDOWN is enabled, WTF_MAKE_FAST_ALLOCATED_WITH_HEAP_IDENTIFIER(Loader)
requires LoaderMalloc to be visible in the translation unit.

This patch adds explicit #include "LoaderMalloc.h" to ArchiveResourceCollection.h and
CachedSVGDocumentReference.h to ensure LoaderMalloc is defined before use. Without this,
unified builds fail due to use of undeclared identifier 'LoaderMalloc'.

Also updates Headers.cmake to expose ArchiveResourceCollection.h and CachedSVGDocumentReference.h
in the WebCore private headers list. No behavior change; this is a build fix only.

* Source/WebCore/Headers.cmake:
* Source/WebCore/loader/archive/ArchiveResourceCollection.h:
* Source/WebCore/loader/cache/CachedSVGDocumentReference.h:

Canonical link: https://commits.webkit.org/296154@main